Comments: -quickly fixed main page spacing of header on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3498,7 +3498,7 @@ input, select, textarea {
 
 			#banner {
 				padding: 7em 2em 13em 2em ;
-				margin-bottom: -2.5em;
+				margin-bottom: -8.5em;
 			}
 
 				#banner .logo {
